--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,36 @@
-version: '3'
-
+version: "3"
 services:
-  cfgsvr1:
-    container_name: cfgsvr1
-    image: mongo
-    command: mongod  --replSet cfgrs --port 27017 --dbpath /data/db
-    ports:
-      - 40001:27017
+  mongo1:
+    hostname: mongo1
+    container_name: localmongo1
+    image: mongo:4.0-xenial
+    expose:
+      - 27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
+  mongo2:
+    hostname: mongo2
+    container_name: localmongo2
+    image: mongo:4.0-xenial
+    expose:
+      - 27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
+  mongo3:
+    hostname: mongo3
+    container_name: localmongo3
+    image: mongo:4.0-xenial
+    expose:
+      - 27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
+  mongosetup:
+    image: mongo:4.0-xenial
+    depends_on:
+      - mongo1
+      - mongo2
+      - mongo3
     volumes:
-      - cfgsvr1:/data/db
-  cfgsvr2:
-    container_name: cfgsvr2
-    image: mongo
-    command: mongod  --replSet cfgrs --port 27017 --dbpath /data/db
-    ports:
-      - 40002:27017
-    volumes:
-      - cfgsvr2:/data/db
-  cfgsvr3:
-    container_name: cfgsvr3
-    image: mongo
-    command: mongod  --replSet cfgrs --port 27017 --dbpath /data/db
-    ports:
-      - 40003:27017
-    volumes:
-      - cfgsvr3:/data/db
-
-volumes:
-  cfgsvr1: {}
-  cfgsvr2: {}
-  cfgsvr3: {}
-
+      - ./scripts:/scripts
+    restart: "no"
+    entrypoint: [ "bash", "/scripts/mongo_setup.sh"]
