--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,24 +4,24 @@ services:
     hostname: mongo1
     container_name: localmongo1
     image: mongo:4.0-xenial
-    expose:
-      - 27017
+    ports:
+      - "40001:27017"
     restart: always
     entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
   mongo2:
     hostname: mongo2
     container_name: localmongo2
     image: mongo:4.0-xenial
-    expose:
-      - 27017
+    ports:
+      - "40002:27017"
     restart: always
     entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
   mongo3:
     hostname: mongo3
     container_name: localmongo3
     image: mongo:4.0-xenial
-    expose:
-      - 27017
+    ports:
+      - "40003:27017"
     restart: always
     entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
   mongosetup:
