--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,3 +34,7 @@ services:
       - ./scripts:/scripts
     restart: "no"
     entrypoint: [ "bash", "/scripts/mongo_setup.sh"]
+  node1:
+    build: ./nodejs
+    ports:
+      - "81:3000"
